--- a/_posts/VR/Bug-Hunting/2025-01-29-private.md
+++ b/_posts/VR/Bug-Hunting/2025-01-29-private.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: D
-categories: Bug-Hunting(N-day-Case-Study,0-day-reports)-in-Real-World
+categories: Bug-Hunting
 ---
 
 AAA
