--- a/_posts/VR/Research/2025-01-29-asd.md
+++ b/_posts/VR/Research/2025-01-29-asd.md
@@ -1,8 +1,8 @@
 ---
-title: "Exploit 개발 과정"
+title: "Buildroot"
 date: 2025-02-01
 categories:
   - Research
-  - DD
+  - Reversing, Analysis
 ---
-Exploit 개발 과정에 대한 설명...
+
