--- a/_posts/VR/Research/2025-01-29-asd copy 2.md
+++ b/_posts/VR/Research/2025-01-29-asd copy 2.md
@@ -3,6 +3,6 @@ title: "How Find the gadget more easily in LIBC "
 date: 2025-02-01
 categories:
   - Research
-  - Exploit techniques
+  - Exploit Techniques
 ---
 Exploit 개발 과정에 대한 설명...
