--- a/_posts/VR/Research/2025-01-29-asd copy.md
+++ b/_posts/VR/Research/2025-01-29-asd copy.md
@@ -3,6 +3,6 @@ title: "Articles for Chrome V8 Bug class"
 date: 2025-02-01
 categories:
   - Research
-  - Software internals
+  - Software Internals
 ---
 Exploit 개발 과정에 대한 설명...
