--- a/_posts/VR/Research/2025-01-29-asd copy 3.md
+++ b/_posts/VR/Research/2025-01-29-asd copy 3.md
@@ -3,6 +3,6 @@ title: "Buildroot"
 date: 2025-02-01
 categories:
   - Research
-  - Reversing, Vulnerability Analysis Skills
+  - Zero Day Reports
 ---
 
