--- a/_posts/VR/Posts/Reversing, Analysis/2025-01-29-asd copy 2.md
+++ b/_posts/VR/Posts/Reversing, Analysis/2025-01-29-asd copy 2.md
@@ -1,8 +1,8 @@
 ---
-title: "Articles for Chrome V8 Bug class"
+title: "asd"
 date: 2025-02-01
 categories:
-  - Research
-  - Software Internals
+  - Posts
+  - Reversing, Vulnerability Analysis
 ---
 Exploit 개발 과정에 대한 설명...
